<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_example</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 Jazzy example: an rclcpp node that prints hello.</description>
  <maintainer email="konstantins@menteebot.com">Kostya</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Main client library dependency -->
  <depend>rclcpp</depend>
  <!-- Standard messages (Float64) for the zero-copy pub/sub demo -->
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
